# Semester-Project-exam-fork

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  api_documentation.csv  package-lock.json  package.json  pyproject.toml  sonar-project.properties
.github/workflows/: main_rpg-project.yml  tests.yml  update_api_docs.yml
.nuxt/: nitro.json  nuxt.json
.nuxt/dev/: index.mjs  index.mjs.map
client/: .gitignore  nuxt.config.ts  package-lock.json  package.json  requests.ts
client/.nuxt/: components.d.ts  imports.d.ts  nitro.json  nuxt.json  tsconfig.json  tsconfig.server.json
client/.nuxt/dev/: index.mjs  index.mjs.map
client/.nuxt/types/: imports.d.ts  layouts.d.ts  plugins.d.ts  schema.d.ts
client/components/: PlaceForm.vue  WorldMap.vue
client/cypress/e2e/: character.cy.js  forgotPassword.cy.js  login.cy.js  register.cy.js  spec.cy.js  world.cy.js
client/cypress/e2e/TestingErrors/: character.cy.js  displayCharacter.cy.js  login.cy.js  world.cy.js
client/cypress/support/: commands.js  utils.js
client/pages/: index.vue
client/pages/characters/: index.vue
client/pages/forgot-password/: index.vue
client/pages/login/: index.vue
client/pages/register/: index.vue
client/pages/reset-password/: index.vue
client/pages/world/: index.vue
client/store/: character.js
cypress/e2e/: spec.cy.js
cypress/e2e/TestingErrors/: character.cy.js  displayCharacter.cy.js  login.cy.js  world.cy.js
database/: .env  diagram.md  docker-compose.dev.yaml
database/db-scripts/: 1create_tables.sql  2create_test_data.sql
database/rpg_api/: .pre-commit-config.yaml  Makefile  models.py  pyproject.toml
database/rpg_api/.github/workflows/: tests.yml
database/rpg_api/deploy/: docker-compose.dev.yml  docker-compose.yml
database/rpg_api/rpg_api/: __main__.py  conftest.py  logging.py  settings.py
database/rpg_api/rpg_api/db/: base.py
database/rpg_api/rpg_api/tests/: test_rpg_api.py
database/rpg_api/rpg_api/web/: lifetime.py
db-dumps/: mongodump.rar  neo4j.dump
db-scripts/: 0triggers.sql  1create_tables.sql  2create_test_data.sql  test_data_insert.sql
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: API_DOCUMENTATION.md
rpg_api/: __init__.py  conftest.py  constants.py  enums.py  exceptions.py  settings.py  utils.py
rpg_api/core/daos/: base_dao.py  base_dao_neo4j.py  base_searchable_dao.py
rpg_api/core/dtos/: base_schemas.py
rpg_api/db/: base.py
rpg_api/db/migrations/versions/: 2023-10-29-13-41_e5089a8003d2.py  2023-10-29-14-17_f31533b76516.py
rpg_api/db/models/: models.py
rpg_api/db/mongo/: dependencies.py
rpg_api/db/mongo/models/: base.py  models.py
rpg_api/db/mongodb/: dependencies.py  utils.py
rpg_api/db/mongodb/models/: base_user_model.py
rpg_api/db/neo4j/: base.py  dependencies.py
rpg_api/db/postgres/: base.py  session.py  utils.py
rpg_api/db/postgres/factory/: async_base_factory.py  factories.py
rpg_api/db/postgres/migrations/: env.py
rpg_api/db/postgres/models/: __init__.py  models.py
rpg_api/services/: __init__.py  templates.py
rpg_api/services/email_service/: email_dependencies.py  email_interface.py  email_service.py
rpg_api/templates/: login.html
rpg_api/tests/: __init__.py  test_rpg_api.py
rpg_api/tests/locust/: README.md  locust_spiketest.py  locustfile.py  utils.py
rpg_api/tests/pytest/: test_utils.py
rpg_api/utils/: daos.py  date_utils.py  dependencies.py  dtos.py  models.py
rpg_api/web/: __init__.py  application.py  lifetime.py  startup_data_mongo.py  startup_data_neo4j.py  startup_data_pg.py
rpg_api/web/api/: __init__.py  monitoring.py  router.py
rpg_api/web/api/auth/: views.py  (+3 more)
rpg_api/web/daos/: base_character_dao.py  base_class_dao.py  base_user_dao.py  character_dao.py  character_location_dao.py  item_dao.py  place_dao.py
rpg_api/web/dtos/: auth_dtos.py  base_character_dtos.py  base_class_dtos.py  base_user.py  base_user_dtos.py  character_dtos.py  character_location_dtos.py  neo4j_dtos.py  place_dtos.py
scripts/: api_docs_csv  api_docs_csv.py  api_docs_md.py  docs_csv  locust_spike_test_csv_to_report.py
(+108 files in other folders)
